cassandra.h

typedef enum { cass_false = 0, cass_true = 1 } cass_bool_t;
typedef double cass_double_t;
typedef __UINT64_TYPE__ cass_uint64_t;
typedef unsigned __INT64_TYPE__ cass_uint64_t;
typedef unsigned long long int cass_uint64_t;
typedef unsigned long long cass_uint64_t;
typedef struct CassCluster_ CassCluster;
typedef struct CassSession_ CassSession;
typedef struct CassStatement_ CassStatement;
typedef struct CassBatch_ CassBatch;
typedef struct CassFuture_ CassFuture;
typedef struct CassDataType_ CassDataType;
typedef struct CassSsl_ CassSsl;
typedef struct CassSchemaMeta_ CassSchemaMeta;
typedef struct CassTimestampGen_ CassTimestampGen;
typedef struct CassRetryPolicy_ CassRetryPolicy;
typedef struct CassMetrics_ {
  struct {
    cass_uint64_t min; 
    cass_uint64_t max; 
    cass_uint64_t mean; 
    cass_uint64_t stddev; 
    cass_uint64_t median; 
    cass_uint64_t percentile_75th; 
    cass_uint64_t percentile_95th; 
    cass_uint64_t percentile_98th; 
    cass_uint64_t percentile_99th; 
    cass_uint64_t percentile_999th; 
    cass_double_t mean_rate; 
    cass_double_t one_minute_rate; 
    cass_double_t five_minute_rate; 
    cass_double_t fifteen_minute_rate; 
  } requests;
  struct {
    cass_uint64_t total_connections; 
    cass_uint64_t available_connections; 
    cass_uint64_t exceeded_pending_requests_water_mark; 
    cass_uint64_t exceeded_write_bytes_water_mark; 
  } stats;
  struct {
    cass_uint64_t connection_timeouts; 
    cass_uint64_t pending_request_timeouts; 
    cass_uint64_t request_timeouts; 
  } errors;
} CassMetrics;
typedef enum CassLogLevel_ {
#define XX_LOG(log_level, _) log_level,
  CASS_LOG_LEVEL_MAP(XX_LOG)
#undef XX_LOG
  CASS_LOG_LAST_ENTRY
} CassLogLevel;
typedef enum CassError_ {
  CASS_OK = 0,
#define XX_ERROR(source, name, code, _) name = CASS_ERROR(source, code),
  CASS_ERROR_MAP(XX_ERROR)
#undef XX_ERROR
  CASS_ERROR_LAST_ENTRY
} CassError;
typedef struct CassLogMessage_ {
  cass_uint64_t time_ms;
  CassLogLevel severity; 
  const char* file; 
  int line; 
  const char* function; 
  char message[CASS_LOG_MAX_MESSAGE_SIZE]; 
} CassLogMessage;
typedef void (*CassLogCallback)(const CassLogMessage* message,
                                void* data);
CASS_EXPORT CassCluster*
cass_cluster_new();
CASS_EXPORT void
cass_cluster_free(CassCluster* cluster);
CASS_EXPORT CassError
cass_cluster_set_contact_points(CassCluster* cluster,
                                const char* contact_points);
CASS_EXPORT CassError
cass_cluster_set_contact_points_n(CassCluster* cluster,
                                  const char* contact_points,
                                  size_t contact_points_length);
CASS_EXPORT CassError
cass_cluster_set_port(CassCluster* cluster,
                      int port);
CASS_EXPORT void
cass_cluster_set_ssl(CassCluster* cluster,
                     CassSsl* ssl);
CASS_EXPORT CassError
cass_cluster_set_protocol_version(CassCluster* cluster,
                                  int protocol_version);
CASS_EXPORT CassError
cass_cluster_set_num_threads_io(CassCluster* cluster,
                                unsigned num_threads);
CASS_EXPORT CassError
cass_cluster_set_queue_size_io(CassCluster* cluster,
                               unsigned queue_size);
CASS_EXPORT CassError
cass_cluster_set_queue_size_event(CassCluster* cluster,
                                  unsigned queue_size);
CASS_EXPORT CassError
cass_cluster_set_core_connections_per_host(CassCluster* cluster,
                                           unsigned num_connections);
CASS_EXPORT CassError
cass_cluster_set_max_connections_per_host(CassCluster* cluster,
                                          unsigned num_connections);
CASS_EXPORT void
cass_cluster_set_reconnect_wait_time(CassCluster* cluster,
                                     unsigned wait_time);
CASS_EXPORT CassError
cass_cluster_set_max_concurrent_creation(CassCluster* cluster,
                                         unsigned num_connections);
CASS_EXPORT CassError
cass_cluster_set_max_concurrent_requests_threshold(CassCluster* cluster,
                                                   unsigned num_requests);
CASS_EXPORT CassError
cass_cluster_set_max_requests_per_flush(CassCluster* cluster,
                                        unsigned num_requests);
CASS_EXPORT CassError
cass_cluster_set_write_bytes_high_water_mark(CassCluster* cluster,
                                             unsigned num_bytes);
CASS_EXPORT CassError
cass_cluster_set_write_bytes_low_water_mark(CassCluster* cluster,
                                            unsigned num_bytes);
CASS_EXPORT CassError
cass_cluster_set_pending_requests_high_water_mark(CassCluster* cluster,
                                                  unsigned num_requests);
CASS_EXPORT CassError
cass_cluster_set_pending_requests_low_water_mark(CassCluster* cluster,
                                                 unsigned num_requests);
CASS_EXPORT void
cass_cluster_set_connect_timeout(CassCluster* cluster,
                                 unsigned timeout_ms);
CASS_EXPORT void
cass_cluster_set_request_timeout(CassCluster* cluster,
                                 unsigned timeout_ms);
CASS_EXPORT void
cass_cluster_set_credentials(CassCluster* cluster,
                             const char* username,
                             const char* password);
CASS_EXPORT void
cass_cluster_set_credentials_n(CassCluster* cluster,
                               const char* username,
                               size_t username_length,
                               const char* password,
                               size_t password_length);
CASS_EXPORT void
cass_cluster_set_load_balance_round_robin(CassCluster* cluster);
CASS_EXPORT CassError
cass_cluster_set_load_balance_dc_aware(CassCluster* cluster,
                                       const char* local_dc,
                                       unsigned used_hosts_per_remote_dc,
                                       cass_bool_t allow_remote_dcs_for_local_cl);
CASS_EXPORT CassError
cass_cluster_set_load_balance_dc_aware_n(CassCluster* cluster,
                                         const char* local_dc,
                                         size_t local_dc_length,
                                         unsigned used_hosts_per_remote_dc,
                                         cass_bool_t allow_remote_dcs_for_local_cl);
CASS_EXPORT void
cass_cluster_set_token_aware_routing(CassCluster* cluster,
                                     cass_bool_t enabled);
CASS_EXPORT void
cass_cluster_set_latency_aware_routing(CassCluster* cluster,
                                       cass_bool_t enabled);
CASS_EXPORT void
cass_cluster_set_latency_aware_routing_settings(CassCluster* cluster,
                                                cass_double_t exclusion_threshold,
                                                cass_uint64_t scale_ms,
                                                cass_uint64_t retry_period_ms,
                                                cass_uint64_t update_rate_ms,
                                                cass_uint64_t min_measured);
CASS_EXPORT void
cass_cluster_set_tcp_nodelay(CassCluster* cluster,
                             cass_bool_t enabled);
CASS_EXPORT void
cass_cluster_set_tcp_keepalive(CassCluster* cluster,
                               cass_bool_t enabled,
                               unsigned delay_secs);
CASS_EXPORT void
cass_cluster_set_timestamp_gen(CassCluster* cluster,
                               CassTimestampGen* timestamp_gen);
CASS_EXPORT void
cass_cluster_set_connection_heartbeat_interval(CassCluster* cluster,
                                               unsigned interval_secs);
CASS_EXPORT void
cass_cluster_set_connection_idle_timeout(CassCluster* cluster,
                                         unsigned timeout_secs);
CASS_EXPORT void
cass_cluster_set_retry_policy(CassCluster* cluster,
                              CassRetryPolicy* retry_policy);
CASS_EXPORT void
cass_cluster_set_use_schema(CassCluster* cluster,
                            cass_bool_t enabled);
CASS_EXPORT CassSession*
cass_session_new();
CASS_EXPORT void
cass_session_free(CassSession* session);
CASS_EXPORT CassFuture*
cass_session_connect(CassSession* session,
                     const CassCluster* cluster);
CASS_EXPORT CassFuture*
cass_session_connect_keyspace(CassSession* session,
                              const CassCluster* cluster,
                              const char* keyspace);
CASS_EXPORT CassFuture*
cass_session_connect_keyspace_n(CassSession* session,
                                const CassCluster* cluster,
                                const char* keyspace,
                                size_t keyspace_length);
CASS_EXPORT CassFuture*
cass_session_close(CassSession* session);
CASS_EXPORT CassFuture*
cass_session_prepare(CassSession* session,
                     const char* query);
CASS_EXPORT CassFuture*
cass_session_prepare_n(CassSession* session,
                       const char* query,
                       size_t query_length);
CASS_EXPORT CassFuture*
cass_session_execute(CassSession* session,
                     const CassStatement* statement);
CASS_EXPORT CassFuture*
cass_session_execute_batch(CassSession* session,
                           const CassBatch* batch);
CASS_EXPORT void
cass_session_get_metrics(const CassSession* session,
                         CassMetrics* output);