src/cassandra.rs

pub type CassLogMessage = Struct_CassLogMessage_;
pub type CassLogCallback =
    ::std::option::Option<extern "C" fn(message: *const CassLogMessage,
                                        data: *mut ::libc::c_void) -> ()>;
#[link(name = "cassandra")]
extern "C" {
    pub fn cass_cluster_new() -> *mut CassCluster;
    pub fn cass_cluster_free(cluster: *mut CassCluster) -> ();
    pub fn cass_cluster_set_contact_points(cluster: *mut CassCluster,
                                           contact_points:
                                               *const ::libc::c_char)
     -> CassError;
    pub fn cass_cluster_set_contact_points_n(cluster: *mut CassCluster,
                                             contact_points:
                                                 *const ::libc::c_char,
                                             contact_points_length: size_t)
     -> CassError;
    pub fn cass_cluster_set_port(cluster: *mut CassCluster,
                                 port: ::libc::c_int) -> CassError;
    pub fn cass_cluster_set_ssl(cluster: *mut CassCluster, ssl: *mut CassSsl)
     -> ();
    pub fn cass_cluster_set_protocol_version(cluster: *mut CassCluster,
                                             protocol_version: ::libc::c_int)
     -> CassError;
    pub fn cass_cluster_set_num_threads_io(cluster: *mut CassCluster,
                                           num_threads: ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_queue_size_io(cluster: *mut CassCluster,
                                          queue_size: ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_queue_size_event(cluster: *mut CassCluster,
                                             queue_size: ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_queue_size_log(cluster: *mut CassCluster,
                                           queue_size: ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_core_connections_per_host(cluster:
                                                          *mut CassCluster,
                                                      num_connections:
                                                          ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_max_connections_per_host(cluster:
                                                         *mut CassCluster,
                                                     num_connections:
                                                         ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_reconnect_wait_time(cluster: *mut CassCluster,
                                                wait_time: ::libc::c_uint)
     -> ();
    pub fn cass_cluster_set_max_concurrent_creation(cluster: *mut CassCluster,
                                                    num_connections:
                                                        ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_max_concurrent_requests_threshold(cluster:
                                                                  *mut CassCluster,
                                                              num_requests:
                                                                  ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_max_requests_per_flush(cluster: *mut CassCluster,
                                                   num_requests:
                                                       ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_write_bytes_high_water_mark(cluster:
                                                            *mut CassCluster,
                                                        num_bytes:
                                                            ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_write_bytes_low_water_mark(cluster:
                                                           *mut CassCluster,
                                                       num_bytes:
                                                           ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_pending_requests_high_water_mark(cluster:
                                                                 *mut CassCluster,
                                                             num_requests:
                                                                 ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_pending_requests_low_water_mark(cluster:
                                                                *mut CassCluster,
                                                            num_requests:
                                                                ::libc::c_uint)
     -> CassError;
    pub fn cass_cluster_set_connect_timeout(cluster: *mut CassCluster,
                                            timeout_ms: ::libc::c_uint) -> ();
    pub fn cass_cluster_set_request_timeout(cluster: *mut CassCluster,
                                            timeout_ms: ::libc::c_uint) -> ();
    pub fn cass_cluster_set_credentials(cluster: *mut CassCluster,
                                        username: *const ::libc::c_char,
                                        password: *const ::libc::c_char)
     -> ();
    pub fn cass_cluster_set_credentials_n(cluster: *mut CassCluster,
                                          username: *const ::libc::c_char,
                                          username_length: size_t,
                                          password: *const ::libc::c_char,
                                          password_length: size_t) -> ();
    pub fn cass_cluster_set_load_balance_round_robin(cluster:
                                                         *mut CassCluster)
     -> ();
    pub fn cass_cluster_set_load_balance_dc_aware(cluster: *mut CassCluster,
                                                  local_dc:
                                                      *const ::libc::c_char,
                                                  used_hosts_per_remote_dc:
                                                      ::libc::c_uint,
                                                  allow_remote_dcs_for_local_cl:
                                                      cass_bool_t)
     -> CassError;
    pub fn cass_cluster_set_load_balance_dc_aware_n(cluster: *mut CassCluster,
                                                    local_dc:
                                                        *const ::libc::c_char,
                                                    local_dc_length: size_t,
                                                    used_hosts_per_remote_dc:
                                                        ::libc::c_uint,
                                                    allow_remote_dcs_for_local_cl:
                                                        cass_bool_t)
     -> CassError;
    pub fn cass_cluster_set_token_aware_routing(cluster: *mut CassCluster,
                                                enabled: cass_bool_t) -> ();
    pub fn cass_cluster_set_latency_aware_routing(cluster: *mut CassCluster,
                                                  enabled: cass_bool_t) -> ();
    pub fn cass_cluster_set_latency_aware_routing_settings(cluster:
                                                               *mut CassCluster,
                                                           exclusion_threshold:
                                                               cass_double_t,
                                                           scale_ms:
                                                               cass_uint64_t,
                                                           retry_period_ms:
                                                               cass_uint64_t,
                                                           update_rate_ms:
                                                               cass_uint64_t,
                                                           min_measured:
                                                               cass_uint64_t)
     -> ();
    pub fn cass_cluster_set_tcp_nodelay(cluster: *mut CassCluster,
                                        enabled: cass_bool_t) -> ();
    pub fn cass_cluster_set_tcp_keepalive(cluster: *mut CassCluster,
                                          enabled: cass_bool_t,
                                          delay_secs: ::libc::c_uint) -> ();
    pub fn cass_cluster_set_timestamp_gen(cluster: *mut CassCluster,
                                          timestamp_gen:
                                              *mut CassTimestampGen) -> ();
    pub fn cass_cluster_set_connection_heartbeat_interval(cluster:
                                                              *mut CassCluster,
                                                          interval_secs:
                                                              ::libc::c_uint)
     -> ();
    pub fn cass_cluster_set_connection_idle_timeout(cluster: *mut CassCluster,
                                                    timeout_secs:
                                                        ::libc::c_uint) -> ();
    pub fn cass_cluster_set_retry_policy(cluster: *mut CassCluster,
                                         retry_policy: *mut CassRetryPolicy)
     -> ();
    pub fn cass_cluster_set_use_schema(cluster: *mut CassCluster,
                                       enabled: cass_bool_t) -> ();
    pub fn cass_session_new() -> *mut CassSession;
    pub fn cass_session_free(session: *mut CassSession) -> ();
    pub fn cass_session_connect(session: *mut CassSession,
                                cluster: *const CassCluster)
     -> *mut CassFuture;
    pub fn cass_session_connect_keyspace(session: *mut CassSession,
                                         cluster: *const CassCluster,
                                         keyspace: *const ::libc::c_char)
     -> *mut CassFuture;
    pub fn cass_session_connect_keyspace_n(session: *mut CassSession,
                                           cluster: *const CassCluster,
                                           keyspace: *const ::libc::c_char,
                                           keyspace_length: size_t)
     -> *mut CassFuture;
    pub fn cass_session_close(session: *mut CassSession) -> *mut CassFuture;
    pub fn cass_session_prepare(session: *mut CassSession,
                                query: *const ::libc::c_char)
     -> *mut CassFuture;
    pub fn cass_session_prepare_n(session: *mut CassSession,
                                  query: *const ::libc::c_char,
                                  query_length: size_t) -> *mut CassFuture;
    pub fn cass_session_execute(session: *mut CassSession,
                                statement: *const CassStatement)
     -> *mut CassFuture;
    pub fn cass_session_execute_batch(session: *mut CassSession,
                                      batch: *const CassBatch)
     -> *mut CassFuture;
    pub fn cass_session_get_schema(session: *mut CassSession)
     -> *const CassSchema;
    pub fn cass_session_get_metrics(session: *mut CassSession,
                                    output: *mut CassMetrics) -> ();
    pub fn cass_schema_free(schema: *const CassSchema) -> ();
    pub fn cass_schema_get_keyspace(schema: *const CassSchema,
                                    keyspace: *const ::libc::c_char)
     -> *const CassSchemaMeta;
    pub fn cass_schema_get_keyspace_n(schema: *const CassSchema,
                                      keyspace: *const ::libc::c_char,
                                      keyspace_length: size_t)
     -> *const CassSchemaMeta;
    pub fn cass_schema_get_udt(schema: *const CassSchema,
                               keyspace: *const ::libc::c_char,
                               type_name: *const ::libc::c_char)
     -> *const CassDataType;
